--- a/lab 1/ManageME/package.json
+++ b/lab 1/ManageME/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.2",
     "astro": "^5.4.1",
-    "nanostores": "^0.11.4"
+    "nanostores": "^0.11.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.8",
