--- a/lab 1/ManageME/package.json
+++ b/lab 1/ManageME/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@astrojs/react": "^4.2.2",
     "astro": "^5.4.1",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "nanostores": "^0.11.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.13.8",
     "typescript": "^5.8.2"
   }
