--- a/lab 1/ManageME/package.json
+++ b/lab 1/ManageME/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.2.2",
+    "@playwright/test": "^1.53.1",
     "astro": "^5.4.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.13.8",
+    "playwright": "^1.53.1",
     "typescript": "^5.8.2"
   }
 }
