--- a/lab 1/ManageME/package.json
+++ b/lab 1/ManageME/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "test": "playwright test --headed --config=playwright.config.ts",
     "astro": "astro"
   },
   "dependencies": {
